# pdf-to-qr-code

./: .gitignore  CLAUDE.md  main.py  pyproject.toml  requirements.txt
